--- a/Week05/DS_HW09-TM.ipynb
+++ b/Week05/DS_HW09-TM.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:485f47815ffcd77061644778542bb2167e824aeebc91eb120a0e2d91a6093c3f"
+  "signature": "sha256:f3768878066468a348e9ea13e064e4d5ef4987348a8b72daa781a0ace0d50561"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,83 +12,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Lab\n",
+      "Homework\n",
       "==========================================\n",
       "Text Feature Extraction for Classification\n",
       "------------------------------------------\n",
-      "Alessandro D. Gagliardi  \n",
-      "*(adapted from Olivier Grisel's tutorial)*"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "slide"
-      }
-     },
-     "source": [
-      "_What is scikit-learn?_\n",
-      "--------------------------------------------------------\n",
-      "\n",
-      "* Library of Machine Learning algorithms\n",
-      "* Focus on standard methods (e.g. ESL-II, (Elements of Statistical Learning))\n",
-      "* Open Source (BSD)\n",
-      "* Simple &nbsp; ** ` fit / predict / transform ` ** &nbsp; API\n",
-      "* Python / NumPy / SciPy / Cython\n",
-      "* Model Assessment, Selection & Ensembles"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
-      "<img src=\"assets/predictive_modeling_data_flow.png\">"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
-      "<style>\n",
-      "div.input {\n",
-      "    width: 105ex; /* about 80 chars + buffer */\n",
-      "}\n",
-      "div.text_cell {\n",
-      "    width: 105ex; /* instead of 100%, */\n",
-      "}\n",
-      "div.text_cell_render {\n",
-      "    /*font-family: \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;*/\n",
-      "    font-family: \"Charis SIL\", serif !important; /* Make non-code text serif. */\n",
-      "    line-height: 145% !important; /* added for some line spacing of text. */\n",
-      "    width: 105ex !important; /* instead of 'inherit' for shorter lines */\n",
-      "}\n",
-      "/* Set the size of the headers */\n",
-      "div.text_cell_render h1 {\n",
-      "    font-size: 18pt;\n",
-      "}\n",
-      "div.text_cell_render h2 {\n",
-      "    font-size: 14pt;\n",
-      "}\n",
-      ".CodeMirror {\n",
-      "     font-family: Consolas, monospace;\n",
-      "}\n",
-      "</style>\n",
-      "\n",
-      "Outline of this section:\n",
-      "\n",
-      "- Turn a corpus of text documents into **feature vectors** using a **Bag of Words** representation,\n",
-      "- Train a simple text classifier on the feature vectors,\n",
-      "- Wrap the vectorizer and the classifier with a **pipeline**,\n",
-      "- Cross-validation and **model selection** on the pipeline."
+      "Stephen Condon"
      ]
     },
     {
@@ -99,162 +27,45 @@
       "import matplotlib.pyplot as plt\n",
       "import numpy as np\n",
       "import pandas as pd\n",
-      "\n",
-      "# Some nice default configuration for plots\n",
-      "plt.rcParams['figure.figsize'] = 10, 7.5\n",
-      "plt.rcParams['axes.grid'] = True\n",
-      "plt.gray()"
-     ],
-     "language": "python",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "skip"
-      }
-     },
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "display_data",
-       "text": [
-        "<matplotlib.figure.Figure at 0x10271c690>"
-       ]
-      }
-     ],
-     "prompt_number": 1
-    },
-    {
-     "cell_type": "heading",
-     "level": 3,
-     "metadata": {
-      "slideshow": {
-       "slide_type": "skip"
-      }
-     },
-     "source": [
-      "Check that you have the datasets"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "%run fetch_data.py"
-     ],
-     "language": "python",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "skip"
-      }
-     },
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Creating datasets folder: /Users/quicksoat/Documents/DAT6-Material/DAT6/datasets\n",
-        "Checking availability of the 20 newsgroups dataset\n",
-        "Downloading dataset from http://people.csail.mit.edu/jrennie/20Newsgroups/20news-bydate.tar.gz (14 MB)\n",
-        "Decompressing /Users/quicksoat/Documents/DAT6-Material/DAT6/datasets/20news-bydate.tar.gz"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Checking that the 20 newsgroups files exist..."
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "=> Success!\n",
-        "Checking availability of the titanic dataset\n",
-        "Downloading titanic data from https://dl.dropboxusercontent.com/u/5743203/data/titanic/titanic_train.csv\n",
-        "=> Success!"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
-       ]
-      }
-     ],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
       "from sklearn.datasets import load_files\n",
       "from sklearn.feature_extraction.text import TfidfVectorizer\n",
       "from sklearn.naive_bayes import MultinomialNB\n",
-      "\n",
-      "# Load the text data\n",
-      "categories = [\n",
-      "    'alt.atheism',\n",
-      "    'talk.religion.misc',\n",
-      "    'comp.graphics',\n",
-      "    'sci.space',\n",
-      "]\n",
-      "twenty_train_small = load_files('datasets/20news-bydate-train/',\n",
-      "    categories=categories, encoding='latin-1')\n",
-      "twenty_test_small = load_files('datasets/20news-bydate-test/',\n",
-      "    categories=categories, encoding='latin-1')\n",
-      "\n",
-      "# Turn the text documents into vectors of word frequencies\n",
-      "vectorizer = TfidfVectorizer(min_df=2)\n",
-      "X_train = vectorizer.fit_transform(twenty_train_small.data)\n",
-      "y_train = twenty_train_small.target\n",
-      "\n",
-      "# Fit a classifier on the training set\n",
-      "classifier = MultinomialNB().fit(X_train, y_train)\n",
-      "print(\"Training score: {0:.1f}%\".format(\n",
-      "    classifier.score(X_train, y_train) * 100))\n",
-      "\n",
-      "# Evaluate the classifier on the testing set\n",
-      "X_test = vectorizer.transform(twenty_test_small.data)\n",
-      "y_test = twenty_test_small.target\n",
-      "print(\"Testing score: {0:.1f}%\".format(\n",
-      "    classifier.score(X_test, y_test) * 100))"
+      "from sklearn.naive_bayes import GaussianNB\n",
+      "from sklearn.pipeline import Pipeline\n",
+      "from sklearn.grid_search import GridSearchCV"
      ],
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "subslide"
+       "slide_type": "skip"
       }
      },
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!ls -lh datasets/"
+     ],
+     "language": "python",
+     "metadata": {},
      "outputs": [
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Training score: 95.1%\n",
-        "Testing score: 85.1%"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
+        "total 28376\r\n",
+        "drwxr-xr-x+ 23 quicksoat  staff   782B May 19 14:30 \u001b[34m20news-bydate-test\u001b[m\u001b[m\r\n",
+        "drwxr-xr-x+ 23 quicksoat  staff   782B May 19 14:30 \u001b[34m20news-bydate-train\u001b[m\u001b[m\r\n",
+        "-rw-r--r--+  1 quicksoat  staff    14M May 12 19:45 20news-bydate.tar.gz\r\n",
+        "drwxr-xr-x+ 10 quicksoat  staff   340B May 19 14:27 \u001b[34mClassification_data\u001b[m\u001b[m\r\n",
+        "-rw-r--r--+  1 quicksoat  staff    60K May 12 19:45 titanic_train.csv\r\n"
        ]
       }
      ],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "By default the decision threshold is 0.5: if we vary the decision threshold from 0 to 1 we could generate a family of binary classifier models that address all the possible trade offs between false positive and false negative prediction errors.\n",
-      "\n",
-      "We can summarize the performance of a binary classifier for all the possible thresholds by plotting the ROC curves and quantifying the area under the curve (AUC):"
-     ]
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -275,21 +86,227 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "$ unzip Classification_data -d Classification_data"
+      "all_twenty_train = load_files('datasets/20news-bydate-train/',\n",
+      "  encoding='latin-1', random_state=42)\n",
+      "all_twenty_test = load_files('datasets/20news-bydate-test/',\n",
+      "    encoding='latin-1', random_state=42)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "all_target_names = all_twenty_train.target_names\n",
+      "all_target_names"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "ename": "SyntaxError",
-       "evalue": "invalid syntax (<ipython-input-2-4e1be413e14c>, line 1)",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-4e1be413e14c>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    $ unzip Classification_data -d Classification_data\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
+       "text": [
+        "['alt.atheism',\n",
+        " 'comp.graphics',\n",
+        " 'comp.os.ms-windows.misc',\n",
+        " 'comp.sys.ibm.pc.hardware',\n",
+        " 'comp.sys.mac.hardware',\n",
+        " 'comp.windows.x',\n",
+        " 'misc.forsale',\n",
+        " 'rec.autos',\n",
+        " 'rec.motorcycles',\n",
+        " 'rec.sport.baseball',\n",
+        " 'rec.sport.hockey',\n",
+        " 'sci.crypt',\n",
+        " 'sci.electronics',\n",
+        " 'sci.med',\n",
+        " 'sci.space',\n",
+        " 'soc.religion.christian',\n",
+        " 'talk.politics.guns',\n",
+        " 'talk.politics.mideast',\n",
+        " 'talk.politics.misc',\n",
+        " 'talk.religion.misc']"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Load the text data\n",
+      "categories = [\n",
+      "    'alt.atheism',\n",
+      "    'talk.religion.misc',\n",
+      "    'comp.graphics',\n",
+      "    'sci.space',\n",
+      "]\n",
+      "twenty_train_small = load_files('datasets/20news-bydate-train/',\n",
+      "    categories=categories, encoding='latin-1')\n",
+      "twenty_test_small = load_files('datasets/20news-bydate-test/',\n",
+      "    categories=categories, encoding='latin-1')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "vectorizer = TfidfVectorizer(min_df=1)\n",
+      "\n",
+      "%time X_train_small = vectorizer.fit_transform(twenty_train_small.data)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "CPU times: user 1.24 s, sys: 84.2 ms, total: 1.33 s\n",
+        "Wall time: 1.56 s\n"
+       ]
+      }
+     ],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "y_train_small = twenty_train_small.target"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "clf = GaussianNB()\n",
+      "clf.fit(X_train_small.toarray(), y_train_small)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "GaussianNB()"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "X_test_small = vectorizer.transform(twenty_test_small.data)\n",
+      "y_test_small = twenty_test_small.target"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "clf.score(X_test_small.toarray(), y_test_small)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 14,
+       "text": [
+        "0.83370288248337032"
+       ]
+      }
+     ],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "clf.score(X_train_small.toarray(), y_train_small)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 15,
+       "text": [
+        "1.0"
+       ]
+      }
+     ],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "\n",
+      "pipeline = Pipeline((\n",
+      "    ('vec', TfidfVectorizer()),\n",
+      "    ('clf', GaussianNB()),\n",
+      "))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from sklearn.grid_search import GridSearchCV\n",
+      "\n",
+      "parameters = {\n",
+      "    'vec__max_df': [0.8, 1.0],\n",
+      "    'vec__ngram_range': [(1, 1), (1, 2)]\n",
+      "}\n",
+      "\n",
+      "gs = GridSearchCV(pipeline, parameters, verbose=2, refit=False, n_jobs=3)\n",
+      "_ = gs.fit(twenty_train_small.data, twenty_train_small.target)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "AttributeError",
+       "evalue": "'Bunch' object has no attribute 'toarray'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-22-0190517fff3c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mgs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGridSearchCV\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpipeline\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrefit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_jobs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtwenty_train_small\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtwenty_train_small\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;31mAttributeError\u001b[0m: 'Bunch' object has no attribute 'toarray'"
+       ]
+      }
+     ],
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
